# llmctl

./: .gitignore  LICENSE  README.md  backend_test.py  pyproject.toml
.github/workflows/: test.yml
configs/: model_dirs.yaml  profiles.yaml  settings.yaml
docs/: QUICKSTART.md  USER-GUIDE.md
llmctl/: __init__.py  cli.py  cli_registry.py  config.py  db.py  discovery.py  main.py  schemas.py
llmctl/adapters/: __init__.py  _common.py  base.py  llama_cpp.py  lmstudio.py  ollama.py  python_script.py  vllm.py  vllm_systemd.py
llmctl/api/: __init__.py  app.py  deps.py  gateway.py  routes_benchmarks.py  routes_gpu.py  routes_models.py  routes_profiles.py  routes_sessions.py
llmctl/integrations/: __init__.py  fleet.py  harbor.py  hermes.py  journalctl.py  launcher_env.py  systemctl.py  turboquant.py  vllm_env.py
llmctl/presets/: __init__.py  paths.py  schema.py  store.py
llmctl/services/: backends.py  benchmarks.py  doctor.py  events.py  gateway.py  health.py  preset_loader.py  preset_store.py  profiles.py  registry.py  router.py  runtimes.py  scheduler.py  sessions.py  systemd.py  unit_gpus.py  validate.py  vllm_orchestrator.py
llmctl/telemetry/: gpu.py  gpu_sampler.py  process.py
llmctl/tui/: __init__.py  _base.py  _data.py  _modals.py  _modals_benchmarks.py  _modals_presets.py  _modals_registry.py  app.py  screens_benchmarks.py  screens_dashboard.py  screens_doctor.py  screens_gpu.py  screens_logs.py  screens_models.py  screens_presets.py  screens_profiles.py  screens_sessions.py  screens_units.py
tests/: test_adapter_lifecycle_hooks.py  test_adapters.py  test_adopt_gpu_ids.py  test_adopt_schema.py  test_adopt_service.py  test_api.py  test_api_auth.py  test_api_registry.py  test_backend_comprehensive.py  test_backends_cleanup.py  test_benchmarks_kinds.py  test_benchmarks_systemd.py  test_cli.py  test_cli_model_prune.py  test_cli_profile_sync.py  test_cli_registry.py  test_cli_safety.py  test_cli_vllm_slot.py  test_discovery.py  test_fleet_preflight.py  test_gateway.py  test_gpu_sampler.py  test_harbor_integration.py  test_hermes_integration.py  test_logs_journal.py  test_managed_unit_config.py  test_ollama_pull.py  test_openai_adopt.py  test_preset_linkage.py  test_preset_loader.py  test_presets.py  test_process_supervisor.py  test_profile_service_crud.py  test_profiles.py  test_readiness_and_health.py  test_registry_reconcile.py  test_registry_service.py  test_review_fixes.py  test_runtimes_and_doctor.py  test_scheduler.py  (+32 more)
tests/fixtures/: _capture_parity_fixtures.py
tests/fixtures/env_renders/: preset_env__deepseek-r1-70b.txt  preset_env__qwen3-coder-next-80b.txt  preset_env__qwq-32b-awq.txt  slot_env__coder-qwen2.5-coder-32b.txt  slot_env__reasoner-r1-with-reasoning-parser.txt  vllm_env__extra-args.txt  vllm_env__kv-dtype-via-arg.txt  vllm_env__llama-3.3-70b-awq.txt  vllm_env__minimal.txt  vllm_env__nccl-p2p-disable.txt  vllm_env__prefix-cache-disabled.txt  vllm_env__spec-decoding.txt  vllm_env__turboquant-k8v4.txt
