[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "llmctl"
version = "0.1.0"
description = "Local-first Linux control plane for managing LLM runtimes (vLLM, llama.cpp, LM Studio, Ollama)."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Yannik Pitcan", email = "pitcany@gmail.com" }]
keywords = ["llm", "gpu", "fastapi", "typer", "textual", "ollama", "vllm"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Framework :: FastAPI",
  "Intended Audience :: Developers",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "llm-models-config",
  "nvidia-ml-py>=12.555.43",
  "platformdirs>=4.2.0",
  "psutil>=6.0.0",
  "pydantic>=2.8.0",
  "PyYAML>=6.0.2",
  "rich>=13.7.0",
  "sqlmodel>=0.0.21",
  "textual>=0.80.0",
  "typer>=0.12.0",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.0",
  # Test-only: byte-diff parity tests assert that llmctl's vllm-tp.env
  # renderer produces the same output as gpu-models for every preset.
  # Once gpu-models becomes a shim over llmctl (Phase 7), this dep
  # flips direction.
  "gpu-models",
]

[tool.uv.sources]
gpu-models = { workspace = true }
llm-models-config = { workspace = true }

[project.scripts]
llmctl = "llmctl.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["llmctl"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]
